docs/api/qiskit/1.3/qiskit.providers.models.PulseDefaults.mdx
---
title: PulseDefaults (v1.3)
description: API reference for qiskit.providers.models.PulseDefaults in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.PulseDefaults
---

# PulseDefaults

<Class id="qiskit.providers.models.PulseDefaults" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/providers/models/pulsedefaults.py#L165-L305" signature="qiskit.providers.models.PulseDefaults(qubit_freq_est, meas_freq_est, buffer, pulse_library, cmd_def, meas_kernel=None, discriminator=None, **kwargs)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  Description of default settings for Pulse systems. These are instructions or settings that may be good starting points for the Pulse user. The user may modify these defaults for custom scheduling.

  <Admonition title="Deprecated since version 1.3" type="danger">
    The class `qiskit.providers.models.pulsedefaults.PulseDefaults` is deprecated as of Qiskit 1.3. It will be removed in Qiskit 2.0. The entire Qiskit Pulse package is being deprecated and will be moved to the Qiskit Dynamics repository: [https://github.com/qiskit-community/qiskit-dynamics](https://github.com/qiskit-community/qiskit-dynamics). Note that once removed, `qiskit.providers.models.pulsedefaults.PulseDefaults` will have no alternative in Qiskit.
  </Admonition>

  Validate and reformat transport layer inputs to initialize. :param qubit\_freq\_est: Estimated qubit frequencies in GHz. :param meas\_freq\_est: Estimated measurement cavity frequencies in GHz. :param buffer: Default buffer time (in units of dt) between pulses. :param pulse\_library: Pulse name and sample definitions. :param cmd\_def: Operation name and definition in terms of Commands. :param meas\_kernel: The measurement kernels :param discriminator: The discriminators :param \*\*kwargs: Other attributes for the super class.

  ## Attributes

  **Parameters**

  *   **qubit\_freq\_est** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*]*) –
  *   **meas\_freq\_est** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*]*) –
  *   **buffer** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) –
  *   **pulse\_library** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")*\[*[*PulseLibraryItem*](qiskit.qobj.PulseLibraryItem "qiskit.qobj.pulse_qobj.PulseLibraryItem")*]*) –
  *   **cmd\_def** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")*\[*[*Command*](qiskit.providers.models.Command "qiskit.providers.models.pulsedefaults.Command")*]*) –
  *   **meas\_kernel** (*MeasurementKernel*) –
  *   **discriminator** (*Discriminator*) –
  *   **kwargs** ([*Dict*](https://docs.python.org/3/library/typing.html#typing.Dict "(in Python v3.13)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*,* [*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*]*) –

  ### qubit\_freq\_est

  <Attribute id="qiskit.providers.models.PulseDefaults.qubit_freq_est">
    Qubit frequencies in Hertz.
  </Attribute>

  ### meas\_freq\_est

  <Attribute id="qiskit.providers.models.PulseDefaults.meas_freq_est">
    Measurement frequencies in Hertz.
  </Attribute>

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.PulseDefaults.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/providers/models/pulsedefaults.py#L265-L298" signature="from_dict(data)" modifiers="classmethod">
    Create a new PulseDefaults object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the PulseDefaults to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.PulseDefaults.to_dict "qiskit.providers.models.PulseDefaults.to_dict").

    **Returns**

    The PulseDefaults from the input dictionary.

    **Return type**

    [PulseDefaults](#qiskit.providers.models.PulseDefaults "qiskit.providers.models.PulseDefaults")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.PulseDefaults.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/providers/models/pulsedefaults.py#L230-L263" signature="to_dict()">
    Return a dictionary format representation of the PulseDefaults. :returns: The dictionary form of the PulseDefaults. :rtype: dict
  </Function>
</Class>

